package app.DatabaseStuff;

public class User {
    private String username;
    private int salt;
    private byte[] hashedPassword;
}
